# daee-hitman

./: .gitignore  README.md
.github/workflows/: adapters-ci.yml
adapters/dominion-observatory-action/: README.md  action.yml
adapters/dominion-observatory-action/src/: check.py
adapters/dominion-observatory-autogen/: README.md  pyproject.toml
adapters/dominion-observatory-autogen/src/dominion_observatory_autogen/: __init__.py  tool_instrument.py
adapters/dominion-observatory-autogen/tests/: test_tool_instrument.py
adapters/dominion-observatory-crewai/: LICENSE  README.md  pyproject.toml
adapters/dominion-observatory-crewai/src/dominion_observatory_crewai/: __init__.py  listener.py
adapters/dominion-observatory-crewai/tests/: test_listener.py
adapters/dominion-observatory-llamaindex/: README.md  pyproject.toml
adapters/dominion-observatory-llamaindex/src/dominion_observatory_llamaindex/: __init__.py  mcp_instrument.py
adapters/dominion-observatory-llamaindex/tests/: test_mcp_instrument.py
content/data/: mcp-behavioral-fingerprints-v1.json  week-17.json
content/data/schema/: v1.json
content/posts/: mcp-sep-btf-draft.md
content/reports/: mcp-behavioral-fingerprints-v1.md  week-17.json  week-17.md
decisions/: 2026-04-21-hitman-run-001.md  2026-04-22-hitman-run-003.md  2026-04-23-hitman-run-004.md  2026-04-24-hitman-run-005.md  2026-04-26-hitman-run-007.md  2026-04-27-hitman-run-008.md  2026-04-28-hitman-run-009.md  2026-04-28-hitman-strategic-evaluation.md  2026-04-29-hitman-run-010.md  2026-04-30-hitman-run-011.md  HITMAN-DAILY-2026-04-21-RUN-002.md
experiments/: EXP-H011-threat-intel-behavioral-evidence-injection.md
genome-failover/: genome-2026-04-21-RUN-002-COLLISION.md  genome-2026-04-21.md  genome-2026-04-22.md  genome-2026-04-23.md  genome-2026-04-24.md  genome-2026-04-26.md  genome-2026-04-27.md  genome-2026-04-28.md  genome-2026-04-29.md  genome-2026-04-30.md
novelty-ledger/: 2026-04-26-spec-thread-evidence-injection-prior-art.md  2026-04-26-week-17-behavioral-report-prior-art.md  2026-04-26-weekly-behavioral-report-prior-art.md  2026-04-27-observable-ecosystem-cadence-prior-art.md  2026-04-28-observatory-ci-action-prior-art.md  2026-04-28-threat-intel-worm-detection-prior-art.md  2026-04-29-erc8004-spec-engagement-prior-art.md  2026-04-30-mcp-sep-btf-prior-art.md
signals/: 2026-04-21-DISTRIBUTION-SIGNAL-crewai-adapter-publish.md  2026-04-21-PARALLEL-RUN-COLLISION-DETECTED.md  2026-04-22-DISTRIBUTION-SIGNAL-autogen-adapter-publish.md  2026-04-23-DISTRIBUTION-SIGNAL-llamaindex-adapter-publish.md  2026-04-24-CEO-BRIEFING-fallback.md  2026-04-24-DISTRIBUTION-SIGNAL-weekly-behavioral-report-week17-deploy.md  2026-04-26-DISTRIBUTION-SIGNAL-week-17-report-deploy.md  2026-04-26-STRIKE-13-vladuzh-langchain-35691.md  2026-04-27-DISTRIBUTION-SIGNAL-weekly-report-serve.md  2026-04-28-DISTRIBUTION-SIGNAL-observatory-action-github-marketplace.md  2026-04-28-STRIKE-MITRE-ATLAS-mcp-behavioral-ioc-submission.md  2026-04-30-DISTRIBUTION-SIGNAL-mcp-sep-btf.md
